tests/sumo/spec/flow/errors/neg_repno/errors.sumo
Error: Negative repetition number in the definition of flow 'f1'.
Quitting (on error).
